really fix overflow in footer nav bar

--- a/src/App.scss
+++ b/src/App.scss
@@ -355,7 +355,6 @@ figure.logo {
       flex-direction: column;
       position: absolute;
       right: 5rem;
-      overflow-y: scroll;
 
       & > a {
         float: right;
